flux/infrastructure/spotweb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spotweb
  labels:
    name: spotweb
